# GH_ESP32S3

./: CMakeLists.txt  README.md  README.txt  SD_CARD_SPEED_TEST_README.md  cammand_function.md  gdbinit  jlinkdebug.txt  partitions__with_ble_wifi.csv  sdkconfig  sdkconfig.old
components/ads1292/: CMakeLists.txt
components/ads1292/include/: ecgRespirationAlgo.h  protocentralAds1292r.h
components/ads1292/src/: ecgRespirationAlgo.cpp  protocentralAds1292r.cpp
components/gh_algo/: CMakeLists.txt
components/gh_algo/include/: GoMoreLib.h  GoMoreLibStruct.h  gh3x_demo_algo_call.h  gh3x_demo_algo_call_inner.h  gh3x_demo_algo_call_version.h  gh3x_demo_algo_config.h  gh3x_demo_algo_hook.h  gh3x_demo_algo_memory.h  gh3x_demo_common.h  goodix_ecg.h  goodix_hba.h  goodix_log.h  goodix_mem.h  goodix_nadt.h  goodix_spo2.h  goodix_sys_bia.h  goodix_sys_hrv.h  goodix_type.h  iot_sys_common_lib.h  iot_sys_def.h
components/gh_algo/include_2/: BiaSampleManager.h  gh3x_adt.h  gh3x_bia_common.h  gh3x_bia_impedance_fixer.h  gh3x_demo.h  gh3x_demo_config.h  gh3x_demo_inner.h  gh3x_demo_version.h  gh3x_drv.h  gh3x_drv_config.h  gh3x_drv_control.h  gh3x_drv_interface.h  gh3x_drv_registers.h  gh3x_gsensor_control.h  gh3x_protocol_cmd.h  gh_errorcode.h  gh_gsr.h  gh_package.h  gh_rpc_functions.h  slabmemory.h  slabmemorydata.h
components/gh_algo/lib/: HRNet_knBasicWeights.c  HRNet_knConfNetWeights.c  HRNet_knMultiWeights.c  HRNet_knSceneNetWeights.c  HRNet_knSceneSwitchWeights.c  HRNet_knSmallWeights.c  HRNet_knTdfusionWeights.c
components/gh_algo/src/: HRNet_knTdfusionWeights.c  HRNet_knWeights.c  gh3x_demo_algo_call.c  gh3x_demo_algo_call_adt.c  gh3x_demo_algo_call_bia.c  gh3x_demo_algo_call_ecg.c  gh3x_demo_algo_call_gsr.c  gh3x_demo_algo_call_hr.c  gh3x_demo_algo_call_hrv.c  gh3x_demo_algo_call_nadt.c  gh3x_demo_algo_call_spo2.c  gh3x_demo_algo_config.c  gh3x_demo_algo_hook.c  gh3x_demo_algo_memory.c  gh3x_demo_strategy.c  goodix_ecg_config.c  goodix_hba_config.c  goodix_hrv_config.c  goodix_nadt_config.c  goodix_spo2_config_for_GH3300_c3450c.c  goodix_spo2_net_for_GH3300_c3450c.c  goodix_sys_bia.c  iot_sys_common_lib.c
components/gh_algo/src_2/: BiaSampleManager.c  gh3x_bia_impedance_fixer.c  gh3x_bia_invalid_data_filter.c  gh3x_bia_offset_processor.c  gh3x_demo.c  gh3x_demo_hook.c  gh3x_demo_reg_array.c  gh3x_demo_struct.c  gh3x_demo_user.c  gh3x_drv_control.c  gh3x_drv_interface.c  gh3x_drvlib.c  gh3x_gsensor_control.c  gh3x_protocol_cmd.c  gh3x_soft_adt.c  gh_gsr.c  gh_multi_sen_pro.c  gh_package.c  impedance_algo.c  staticmapimp.c
components/gh_drv/: CMakeLists.txt
components/gh_drv/include/: gh3x_bia.h  gh3x_bia_cali_processor.h  gh3x_bia_invalid_data_filter.h  gh3x_bia_offset_processor.h  gh3x_demo_config.h  gh3x_demo_inner.h  gh3x_demo_protocol.h  gh3x_drv.h  gh3x_drv_version.h  gh3x_fifo_analyze.h  gh3x_protocol.h  gh3x_protocol_inner.h  gh3x_soft_led_agc.h  gh3x_soft_led_agc_interface.h  gh_multi_sen_pro.h  gh_packagedata.h  gh_rpccore.h  impedance_algo.h  staticmapimp.h
components/gh_drv/src/: gh3x_bia_cali_processor.c  gh3x_bia_impedance_fixer.c  gh3x_demo.c  gh3x_demo_hook.c  gh3x_demo_protocol.c  gh3x_demo_reg_array.c  gh3x_demo_user.c  gh3x_drv_config.c  gh3x_drv_control.c  gh3x_fifo_analyze.c  gh3x_soft_adt.c  gh3x_soft_led_agc.c  gh_rpccore.c  hrv.config  impedance_algo.c  slabmemory.c
components/led/: CMakeLists.txt
components/led/include/: led.h
components/led/src/: led_blink.c
components/pwm_pump/: CMakeLists.txt
components/pwm_pump/include/: pwm.h
components/pwm_pump/src/: pwm.c
components/spi/: CMakeLists.txt
components/spi/include/: ads1292r.h  ads1x9x.h  circular_buffer.h  lcd_init.h  spi.h  spi_bitbang.h
components/spi/src/: ads1292r.c  ads1x9x.c  circular_buffer.c  lcd_init.c  spi.c  spi.c.rej  spi_bitbang.c
components/uart/: CMakeLists.txt
components/uart/include/: uart.h
components/uart/src/: uart.c
gh3300_config/: 0801pd.config  0828SPO2.config  0828pd.config  0829evk.config  bia.config  bia2.config  bia3.config  blank.config  hrv.config  ppg.config  ppg2.config
gh3300_config/GH3300/00-quick_started/: 00-PPG_USER_4PD_62d5k_315uS_BG2_25Hz_V01.config  01-PPG_USER_4PD_62d5k_315uS_BG2_100Hz_V01.config  10-ECG_AC1_ALG_Fs500Hz_V02.config  11-ECG_DC1_ALG_Fs500Hz_V02.config  20-BIA_slot-50K-ContactImpedence-4uA4Mov_Cali.config  21-BIA_slot_250K-ContactImpedence-4uA4Mov_Cali.config  30-GSR_DC_mode00K.config  31-GSR_DC_mode200K.config  41-PWTT.config  blank.config
gh3300_config/GH3300/01-performance_test/: BIA1_Offset_Itx=8uA_50kHz_CC=OFF_Active=OFF.config  BIA2_Rref_Itx=8uA_50kHz_CC=OFF_Active=OFF.config  BIA3_RX_Itx=8uA_50kHz_CC=OFF_Active=OFF.config  BIA_slot-50K-ContactImpedence-4uA4Mov_Cali.config  BIA_slot_250K-ContactImpedence-4uA4Mov_Cali.config  ECG_AC1_G20_NoAdt_Hpf0d05Hz_Fs500Hz_V02.config  ECG_AC1_G20_NoAdt_Hpf0d8Hz_Fs500Hz_V02.config  ECG_DC1_G01_NoAdt_Fs500Hz_V02.config  GSR_DC_mode00K.config  GSR_DC_mode200K.config  PPG_EVK_1Slots_4PD_250k_79uS_1BG_25Hz_V01.config  PPG_EVK_2Slots_4PD_62d5k_158uS_2BG_25Hz_V01.config  PPG_EVK_BGR_1PD_15d625k_39uS_BG0_BG1_BG2_100Hz_V01.config  PPG_EVK_SNR_4PD_15d625k_315uS_BG2_100Hz_V01.config  PPG_EVK_SNR_4PD_62d5k_158uS_BG2_100Hz_V01.config
gh3300_config/GH3300/03/: BIA_slot_5-50-100K-2uA-x20Measure-demo.config  BIA_slot_5-50-250K-2uA-x20Measure-demo.config  BIA_slot_mode2A-mcu-ADT3-2uA4Mov.config  ECG_AC1_ALGV0.3.config  ECG_AC1_ALG_V0.2.config  ECG_DC1_ALGV0.3.config  pwtt.config  (+13 more)
main/: CMakeLists.txt  EMG_task.c  GH3300.c  Kconfig.projbuild  UI_task.c  adc_buttom.c  blink_example_main.c  gh3300_knconfig.c  gh3300_task.c  global_config.c  global_config.h  https_ota.c  idf_component.yml  led_task.c  main.c  sdio_sdcard.c  uart_task.c
main/BLE_SPP_SERVER/: ble_data_sender.c  ble_data_sender.h  ble_protocol_integration.c  ble_protocol_integration.h  ble_protocol_test.c  ble_protocol_test.h  ble_spp_server_demo.c  protocol_demo.c  protocol_demo.h  protocol_handler.c  protocol_handler.h  protocol_test.c  protocol_test.h
main/blufi/: blufi_example.h  blufi_example_main.c  blufi_init.c
