idf_component_register(
    # SRC_DIRS 
    #     "./src"
    #     "./src_2"
    #     "./lib"
    SRCS
        "src/gh3x_demo_algo_call_adt.c" 
        "src/gh3x_demo_algo_call_bia.c" 
        "src/gh3x_demo_algo_call_ecg.c" 
        "src/gh3x_demo_algo_call_gsr.c" 
        "src/gh3x_demo_algo_call_hr.c" 
        "src/gh3x_demo_algo_call_hrv.c" 
        "src/gh3x_demo_algo_call_nadt.c" 
        "src/gh3x_demo_algo_call_spo2.c" 
        "src/gh3x_demo_algo_call.c" 
        "src/gh3x_demo_algo_config.c" 
        "src/gh3x_demo_algo_hook.c" 
        "src/gh3x_demo_algo_memory.c" 
        "src/gh3x_demo_strategy.c" 
        "src/goodix_ecg_config.c" 
        "src/goodix_hba_config.c" 
        "src/goodix_hrv_config.c" 
        "src/goodix_nadt_config.c" 
        "src/goodix_spo2_config_for_GH3300_c3450c.c" 
        "src/goodix_spo2_net_for_GH3300_c3450c.c" 
        "src/goodix_sys_bia.c" 
        "src/heart_net_org_dll.c" 
        "lib/HRNet_knBasicWeights.c" 
        "lib/HRNet_knConfNetWeights.c" 
        "lib/HRNet_knMultiWeights.c" 
        "lib/HRNet_knSceneNetWeights.c" 
        "lib/HRNet_knSceneSwitchWeights.c" 
        "lib/HRNet_knSmallWeights.c" 
        "lib/HRNet_knTdfusionWeights.c" 
        "lib/HRNet_knWeights.c" 
        "src/iot_sys_common_lib.c"

        "src_2/BiaSampleManager.c" 
        "src_2/gh_gsr.c" 
        "src_2/gh_multi_sen_pro.c" 
        "src_2/gh_package.c" 
        "src_2/gh_rpccore.c" 
        "src_2/gh3x_bia_cali_processor.c" 
        "src_2/gh3x_bia_impedance_fixer.c" 
        "src_2/gh3x_bia_invalid_data_filter.c" 
        "src_2/gh3x_bia_offset_processor.c" 
        "src_2/gh3x_demo_hook.c" 
        "src_2/gh3x_demo_protocol.c" 
        "src_2/gh3x_demo_reg_array.c" 
        "src_2/gh3x_demo_struct.c" 
        "src_2/gh3x_demo_user.c" 
        "src_2/gh3x_demo.c" 
        "src_2/gh3x_drv_config.c" 
        "src_2/gh3x_drv_control.c" 
        "src_2/gh3x_drv_interface.c" 
        "src_2/gh3x_gsensor_control.c" 
        "src_2/gh3x_protocol_cmd.c" 
        "src_2/gh3x_soft_adt.c" 
        "src_2/gh3x_soft_led_agc.c" 
        "src_2/impedance_algo.c" 
        "src_2/slabmemory.c" 
        "src_2/staticmapimp.c" 
        "src_2/gh3x_drvlib.c" 
        "src_2/gh3x_fifo_analyze.c"
    # INCLUDE_DIRS "include" "." "../gh_drv/include" "lib"
    INCLUDE_DIRS  "." "include" "include_2"
    REQUIRES "freertos" "driver"  "uart" spi
)
